--- a/siteTest/index.html
+++ b/siteTest/index.html
@@ -41,13 +41,12 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Introduction</h2>
 								<span class="image main"><img src="images/dev.jpg" alt="" /></span>
 								<p>Actuellement développeur en Bachelor responsable de projet informatique. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement en poste à la DSI du groupe Orange.</p>
 								<p>Je souhaiterai intégrer un Master "Expert en developpement Web" en octobre 2018.<br/> Le tout en contrat de Professionnalisation sur 2 ans.
 								<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui si trouve est OpenSource</p>
-								<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développent des outils pour simplifier les travaux des chercheurs.</p>
-								
+								<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
 							</article>
 
 						<!-- Work -->
@@ -56,7 +55,7 @@
 								<h3>Développeur/Concepteur Web</h3>
 								<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
 								<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
-								<p>Développeur à la DSI d’Orange Franc.<br/>
+								<p>Développeur à la DSI d’Orange France.<br/>
 								J'ai participé au développement d’une « single page application » (SPA, JS, mvc)</p>
 								<p>Conception et développement de WebServices (PHP, JS) font en partie mon quotidien.
 								<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire de la conduction d'un projet de A à Z</p>
