--- a/siteTest/index.html
+++ b/siteTest/index.html
@@ -45,7 +45,7 @@
 								<span class="image main"><img src="images/dev.jpg" alt="" /></span>
 								<p>Actuellement développeur en Bachelor responsable de projet informatique. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement en poste à la DSI du groupe Orange.</p>
 								<p>Je souhaiterai intégrer un Master "Expert en developpement Web" en octobre 2018.<br/> Le tout en contrat de Professionnalisation sur 2 ans.
-								<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui si trouve est OpenSource</p>
+								<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
 								<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
 							</article>
 
