--- a/siteTest/index.html
+++ b/siteTest/index.html
@@ -1,100 +1,102 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Rémy Lefebvre</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body>
+<html lang="fr"> 
+<head>
+	<title>Rémy Lefebvre</title>
+	<meta content="text/html; charset=utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="icon fa-power-off"></span>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>Rémy Lefebvre</h1>
-								<p>Developpeur Web FullStack (Back: 70% - Front: 30%)<br />
-								Actuellement sur un pôle DevRap à <a href="https://www.orange.fr">Orange France</a></p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Exp. Pro.</a></li>
-								<li><a href="#about">Etudes</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</nav>
-						
-					</header>
+		<!-- Header -->
+		<header id="header">
+			<div class="logo">
+				<span class="icon fa-power-off"></span>
+			</div>
+			<div class="content">
+				<div class="inner">
+					<h1>Rémy Lefebvre</h1>
 
-				<!-- Main -->
-					<div id="main">
+					<p>Développeur Web FullStack (Back: 70% - Front: 30%)<br/>Développeur DevRap @ <a href="https://www.orange.fr">Orange France</a></p>
+					<span class="label">Télécharger mon CV</span><br/><a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download"></a>
+					<p>Lefebvre.remy.pro@gmail.com</p>
+				</div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#intro">Intro</a></li>
+					<li><a href="#work">Exp. Pro.</a></li>
+					<li><a href="#about">Etudes</a></li>
+				</ul>
+			</nav>
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Introduction</h2>
-								<span class="image main"><img src="images/dev.jpg" alt="" /></span>
-								<p>Actuellement développeur en Bachelor responsable de projet informatique. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement en poste à la DSI du groupe Orange.</p>
-								<p>Je souhaiterai intégrer un Master "Expert en developpement Web" en octobre 2018.<br/> Le tout en contrat de Professionnalisation sur 2 ans.
-								<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
-								<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
-							</article>
+		</header>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Orange</h2>
-								<h3>Développeur/Concepteur Web</h3>
-								<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
-								<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
-								<p>Développeur à la DSI d’Orange France.<br/>
-								J'ai participé au développement d’une « single page application » (SPA, JS, mvc)</p>
-								<p>Conception et développement de WebServices (PHP, JS) font en partie mon quotidien.
-								<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire de la conduction d'un projet de A à Z</p>
-								<p>Utilisation d’outils : soap, gantt, git/svn</p>
-								
-								<h2 class="major">Cdip</h2>
-								<h3>Développeur Web</h3>
-								<span class="image main"><img src="images/Facilotab2.png" alt="" /></span>
-								<h3>juin 2016, Aout 2017 - Osny 95</h3>
-								<p>Développeur Web en charge de l’installation d’un CMS Ecommerce (Prestashop) ainsi que créateur de : Modules et WebServices (PHP mvc, Smarty, REST)</p>
-								<p>J'ai fais mes premiers pas dans l'univers du dev front en créant le template du site</p>
-								<p>Utilisation d’outils : mantis, git/svn</p>
-							</article>
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Intro -->
+			<article id="intro">
+				<h2 class="major">Introduction</h2>
+				<span class="image main"><img src="images/dev.jpg" alt="" /></span>
+				<p>Actuellement développeur en Bachelor responsable de projet informatique. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement en poste à la DSI du groupe Orange.</p>
+				<p>Je souhaiterai intégrer un Master "Expert en developpement Web" en octobre 2018.<br/> Le tout en contrat de Professionnalisation sur 2 ans.
+					<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
+					<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
+				</article>
+
+				<!-- Work -->
+				<article id="work">
+					<h2 class="major">Orange</h2>
+					<h3>Développeur/Concepteur Web</h3>
+					<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
+					<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
+					<p>Développeur à la DSI d’Orange France.<br/>
+						J'ai participé au développement d’une « single page application » (SPA, JS, mvc)</p>
+						<p>Conception et développement de WebServices (PHP, JS) font partie de mon quotidien.
+							<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire la gestion d'un projet de A à Z</p>
+							<p>Utilisation d’outils : soap, gantt, git/svn</p>
+
+							<h2 class="major">Cdip</h2>
+							<h3>Développeur Web</h3>
+							<span class="image main"><img src="images/Facilotab2.png" alt="" /></span>
+							<h3>Juin 2016, Aout 2017 - Osny 95</h3>
+							<p>Développeur Web en charge de l’installation d’un CMS Ecommerce (Prestashop) ainsi que créateur de : Modules et WebServices (PHP mvc, Smarty, REST)</p>
+							<p>J'ai fais mes premiers pas dans l'univers du dev front en créant le template du site</p>
+							<p>Utilisation d’outils : mantis, git/svn</p>
+						</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">Bachelor</h2>
-								<h3>Responsable de projet informatique (bac+3)</h3>
-								<span class="image main"><img src="images/Hitema.jpg" alt="" /></span>
-								<p>Cursus suivie en alternance.<br/>
-									Ecole: Hitema<br/>
-									Entreprise: Orange<br/>
-									Rythme: 3 semaines(ent)/1 semaines (eco)<br/>
-									CryptoAnalitics : Plateforme de prévision de fluctuation de crypto monnaie (nodeJs, expérimentation AngularJs)<br/>
-									Certification CISCO 1 (CCNA1)
-								</p>
-									<hr>
-								<h2 class="major">BTS SIO</h2>
-								<h3>Systeme informatique aux organisations (bac+2)</h3>
-								<span class="image main"><img src="images/Hitema.jpg" alt="" /></span>
-								<p>	Cursus suivie en alternance.<br/>
-									Ecole: Hitema<br/>
-									Entreprise: CDIP<br/>
-									Rythme: 3 semaines(ent)/2 semaines (eco)<br/>
-									Premier projet annuel (GSB) disponible sur github
-								</p>
-								</article>
+						<article id="about">
+							<h2 class="major">Bachelor</h2>
+							<h3>Responsable de projet informatique (bac+3)</h3>
+							<span class="image main"><img src="images/Hitema.jpg" alt="" /></span>
+							<p>Cursus suivie en alternance.<br/>
+								Etablissement scolaire: Hitema<br/>
+								Entreprise: Orange<br/>
+								Rythme: 3 semaines(ent)/1 semaines (eco)<br/>
+								CryptoAnalitics : Plateforme de prévision de fluctuation de crypto monnaie (nodeJs, expérimentation AngularJs)<br/>
+								Certification CISCO 1 (CCNA1)
+							</p>
+							<hr>
+							<h2 class="major">BTS SIO</h2>
+							<h3>Systeme informatique aux organisations (bac+2)</h3>
+							<p>	Cursus suivie en alternance.<br/>
+								Etablissement scolaire: Hitema<br/>
+								Entreprise: CDIP<br/>
+								Rythme: 3 semaines(ent)/2 semaines (eco)<br/>
+								Premier projet annuel (GSB) disponible sur github
+							</p>
+						</article>
 
-						<!-- Contact -->
+							<!-- Contact
+
+							this is work in progress (i search to send mail only with js)
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
@@ -116,44 +118,47 @@
 									</ul>
 								</form>
 							</article>
-
+						-->
 					</div>
 
-				<!-- Footer -->
+					<!-- Footer -->
 					<footer id="footer">
-					<ul class="icons">
-					<li>
-						<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" class="icon fa-linkedin">
-							<span class="label">Linkedin</span>
-						</a>
-						<a href="https://github.com/Thorfy" class="icon fa-github">
-							<span class="label">GitHub</span>
-						</a>
-						<a href="http://remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download">
-							<span class="label">Télécharger mon CV</span>
-						</a>
-					</li>
-					</ul>
-						<p class="copyright">&copy; <a href="http://remylefebvre.fr">RemyLefebvre.fr</a></p>
+						<ul class="icons">
+							<li>
+								<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" class="icon fa-linkedin">
+									<span class="label">Linkedin</span>
+								</a>
+								<a href="https://github.com/Thorfy" class="icon fa-github">
+									<span class="label">GitHub</span>
+								</a>
+								<a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download">
+									<span class="label">Télécharger mon CV</span>
+								</a>
+								<a href="mailto:lefebvre.remy.pro@gmail.com" class="icon fa-envelope">
+									<span class="label">email</span>
+								</a>
+							</li>
+						</ul>
+						<p class="copyright">&copy; <a href="http://www.remylefebvre.fr">www.RemyLefebvre.fr</a></p>
 					</footer>
 
-			</div>
+				</div>
 
-		<!-- BG -->
-			<div id="bg">
-				<!-- particles.js container -->
-				<div id="particles-js"></div>
-			</div>
+				<!-- BG -->
+				<div id="bg">
+					<!-- particles.js container -->
+					<div id="particles-js"></div>
+				</div>
 
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/particles.min.js"></script>
-			<script src="assets/js/app.js"></script>
-			
+				<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/skel.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
+				<script src="assets/js/particles.min.js"></script>
+				<script src="assets/js/app.js"></script>
 
-	</body>
-</html>
+
+			</body>
+			</html>
