--- a/siteTest/index.html
+++ b/siteTest/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 <head>
 	<title>Rémy Lefebvre - Développeur FullStack</title>
+	<link rel="icon" type="image/png" href="image/logo.png" />
 	<meta name="description" content="Rémy Lefebvre - Développeur FullStack chez @EnvergureD - Master: Expert en Etudes et Développement du Système d’Information">
 	<meta charset="UTF-8">
-	<link rel="canonical" href="http://remylefebvre.fr" />
+	<link rel="canonical" href="http://www.remylefebvre.fr" />
 	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +26,7 @@
 				<div class="inner">
 					<h1>Rémy Lefebvre</h1>
 
-					<p>Développeur Web FullStack (Back: 70% - Front: 30%)<br/>Développeur DevRap @ <a href="https://www.orange.fr">Orange France</a></p>
+					<p>Développeur Web FullStack (Back: 70% - Front: 30%)<br/>@<a href="https://www.envergure-digitale.fr/">EnvergureD</a><br />Master: Expert en Etudes et Développement du Système d’Information</p>
 					<span class="label">Télécharger mon CV</span><br/><a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download"></a>
 					<p>Lefebvre.remy.pro@gmail.com</p>
 				</div>
@@ -47,19 +48,30 @@
 			<article id="intro">
 				<h2 class="major">Introduction</h2>
 				<span class="image main"><img src="images/dev.jpg" alt="" /></span>
-				<p>Actuellement développeur en Bachelor responsable de projet informatique. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement en poste à la DSI du groupe Orange.</p>
-				<p>Je souhaiterai intégrer un Master "Expert en développement Web" en octobre 2018.<br/> Le tout en contrat de Professionnalisation sur 2 ans.
+				<p>Développeur web Junior. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement Chez Envergure Digitale, une agence web 360</p>
 					<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
 					<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
 				</article>
 
 				<!-- Work -->
 				<article id="work">
+          <h2 class="major">Envergure Digitale</h2>
+          <h3>Développeur Web FullStack</h3>
+          <span class="image main"><img src="images/EnvergureDigitale.jpg" alt="" /></span>
+          <h3>Septembre 2018, Houille 78</h3>
+          <p>Développeur web.<br/>
+            En charge de plusieurs projet web</p>
+            <p>Conception et développement de boutiques Ecommerce
+              <br/>En lien avec ma formation:<br/>Développement et gestion de projet</p>
+              <p>Environnements et outils: Linux, Zeplin, Prestashop, Git</p>
+
+
+
 					<h2 class="major">Orange</h2>
 					<h3>Développeur/Concepteur Web</h3>
 					<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
 					<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
-					<p>Développeur à la DSI déOrange France.<br/>
+					<p>Développeur à la DSI d'Orange France.<br/>
 						J'ai participé au développement d'une "single page application" (SPA, JS, mvc)</p>
 						<p>Conception et développement de WebServices (PHP, JS) font partie de mon quotidien.
 							<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire la gestion d'un projet de A à Z</p>
@@ -128,21 +140,21 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li>
-								<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" class="icon fa-linkedin">
+								<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" title="Linkedin" class="icon fa-linkedin">
 									<span class="label">Linkedin</span>
 								</a>
-								<a href="https://github.com/Thorfy" class="icon fa-github">
+								<a href="https://github.com/Thorfy" title="GitHub" class="icon fa-github">
 									<span class="label">GitHub</span>
 								</a>
-								<a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download">
+								<a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" title="Mon CV" class="icon fa-download">
 									<span class="label">Télécharger mon CV</span>
 								</a>
-								<a href="mailto:lefebvre.remy.pro@gmail.com" class="icon fa-envelope">
+								<a href="mailto:lefebvre.remy.pro@gmail.com" title="lefebvre.remy.pro@gmail.com" class="icon fa-envelope">
 									<span class="label">email</span>
 								</a>
 							</li>
 						</ul>
-						<p class="copyright">&copy; <a href="http://www.remylefebvre.fr">www.RemyLefebvre.fr</a></p>
+						<p class="copyright">&copy; <a title="www.RemyLefebvre.fr" href="http://www.remylefebvre.fr">www.RemyLefebvre.fr</a></p>
 					</footer>
 
 				</div>
@@ -161,7 +173,7 @@
 				if(window.innerWidth <= 800 && window.innerHeight <= 600){
 
 				}else{
-						$('#bg').html('<div id="particles-js"></div>');
+						$('#bg').html('<div id="particles-js" style="height: 100%;"></div>');
 				}
 
 				</script>
