--- a/siteTest/index.html
+++ b/siteTest/index.html
@@ -19,14 +19,11 @@
 
 		<!-- Header -->
 		<header id="header">
-			<div class="logo">
-				<span class="icon fa-power-off"></span>
-			</div>
 			<div class="content">
 				<div class="inner">
 					<h1>Rémy Lefebvre</h1>
 
-					<p>Développeur Web FullStack (Back: 70% - Front: 30%)<br/>@<a href="https://www.envergure-digitale.fr/">EnvergureD</a><br />Master: Expert en Etudes et Développement du Système d’Information</p>
+					<p>Développeur Web FullStack (Back: 70% - Front: 30%)<br/>@<a href="https://www.lachainemeteo.com/">LaChaineMeteo.com</a><br />Licence: Responsable de projet informatique</p>
 					<span class="label">Télécharger mon CV</span><br/><a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" class="icon fa-download"></a>
 					<p>Lefebvre.remy.pro@gmail.com</p>
 				</div>
@@ -36,6 +33,7 @@
 					<li><a href="#intro">Intro</a></li>
 					<li><a href="#work">Exp. Pro.</a></li>
 					<li><a href="#about">Etudes</a></li>
+					<li><a href="#ArtOfCode">Art Of Code</a></li>
 				</ul>
 			</nav>
 
@@ -48,149 +46,139 @@
 			<article id="intro">
 				<h2 class="major">Introduction</h2>
 				<span class="image main"><img src="images/dev.jpg" alt="" /></span>
-				<p>Développeur web Junior. Je développe et j'aime ça ! Récemment spécialisé web je suis actuellement Chez Envergure Digitale, une agence web 360</p>
-					<p>Je pratique le Wakeboard pour rester en forme ! et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
-					<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
-				</article>
+				<p>Développeur web pour LaChaineMeteo</p>
+				<p>Je pratique une multitude  de sport et développe pour le plaisir le reste de mon temps. Vous pouvez retrouver quelques expérimentations sur mon github. Tous ce qui s'y trouve est OpenSource</p>
+				<p>Passionné par la science: plus précisement la Géologie/Biologie. J'aimerai beaucoup pouvoir apporter ma pierre au grand édifice qu'est la recherche, en développant des outils pour simplifier les travaux des chercheurs.</p>
+				<p>Un autre de mes passes-temps est de m'essayer à <a href="https://www.remylefebvre.com/#ArtOfCode">l'art du code.</a></p>
+			</article>
 
-				<!-- Work -->
-				<article id="work">
-          <h2 class="major">Envergure Digitale</h2>
-          <h3>Développeur Web FullStack</h3>
-          <span class="image main"><img src="images/EnvergureDigitale.jpg" alt="" /></span>
-          <h3>Septembre 2018, Houille 78</h3>
-          <p>Développeur web.<br/>
-            En charge de plusieurs projet web</p>
-            <p>Conception et développement de boutiques Ecommerce
-              <br/>En lien avec ma formation:<br/>Développement et gestion de projet</p>
-              <p>Environnements et outils: Linux, Zeplin, Prestashop, Git</p>
-
-
-
-					<h2 class="major">Orange</h2>
-					<h3>Développeur/Concepteur Web</h3>
-					<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
-					<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
-					<p>Développeur à la DSI d'Orange France.<br/>
-						J'ai participé au développement d'une "single page application" (SPA, JS, mvc)</p>
-						<p>Conception et développement de WebServices (PHP, JS) font partie de mon quotidien.
-							<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire la gestion d'un projet de A à Z</p>
-							<p>Utilisation d'outils : soap, gantt, git/svn</p>
-
-							<h2 class="major">Cdip</h2>
-							<h3>Développeur Web</h3>
-							<span class="image main"><img src="images/Facilotab2.png" alt="" /></span>
-							<h3>Juin 2016, Aout 2017 - Osny 95</h3>
-							<p>Développeur Web en charge de l'installation d'un CMS Ecommerce (Prestashop) ainsi que créateur de : Modules et WebServices (PHP mvc, Smarty, REST)</p>
-							<p>J'ai fais mes premiers pas dans l'univers du dev front en créant le template du site</p>
-							<p>Utilisation d'outils : mantis, git/svn</p>
-						</article>
-
-						<!-- About -->
-						<article id="about">
-							<h2 class="major">Bachelor</h2>
-							<h3>Responsable de projet informatique (bac+3)</h3>
-							<span class="image main"><img src="images/Hitema.jpg" alt="" /></span>
-							<p>Cursus suivie en alternance.<br/>
-								Etablissement scolaire: Hitema<br/>
-								Entreprise: Orange<br/>
-								Rythme: 3 semaines(ent)/1 semaines (eco)<br/>
-								CryptoAnalitics : Plateforme de prévision de fluctuation de crypto monnaie (nodeJs, expérimentation AngularJs)<br/>
-								Certification CISCO 1 (CCNA1)
-							</p>
-							<hr>
-							<h2 class="major">BTS SIO</h2>
-							<h3>Systeme informatique aux organisations (bac+2)</h3>
-							<p>	Cursus suivie en alternance.<br/>
-								Etablissement scolaire: Hitema<br/>
-								Entreprise: CDIP<br/>
-								Rythme: 3 semaines(ent)/2 semaines (eco)<br/>
-								Premier projet annuel (GSB) disponible sur github
-							</p>
-						</article>
-
-							<!-- Contact
-
-							this is work in progress (i search to send mail only with js)
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Nom</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Envoyer" class="special" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-							</article>
-						-->
-					</div>
-
-					<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li>
-								<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" title="Linkedin" class="icon fa-linkedin">
-									<span class="label">Linkedin</span>
-								</a>
-								<a href="https://github.com/Thorfy" title="GitHub" class="icon fa-github">
-									<span class="label">GitHub</span>
-								</a>
-								<a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" title="Mon CV" class="icon fa-download">
-									<span class="label">Télécharger mon CV</span>
-								</a>
-								<a href="mailto:lefebvre.remy.pro@gmail.com" title="lefebvre.remy.pro@gmail.com" class="icon fa-envelope">
-									<span class="label">email</span>
-								</a>
-							</li>
-						</ul>
-						<p class="copyright">&copy; <a title="www.RemyLefebvre.fr" href="http://www.remylefebvre.fr">www.RemyLefebvre.fr</a></p>
-					</footer>
-
-				</div>
-
-				<!-- BG -->
-				<div id="bg">
+			<!-- Work -->
+			<article id="work">
+				<h2 class="major">LaChaineMeteo/MeteoConsult</h2>
+				<h3>Développeur Web FullStack</h3>
+				<span class="image main"><img src="images/LaChaineMeteo2.jpg" alt="" /></span>
+				<h3>Juin 2019 - Vernouillet 78</h3>
+				<p>Développeur web.
+					<br/>Travaillant sur plusieurs projet web
+				</p>
+				<p>Conception et développement d'api
+					<br/>Développement Front & Back
+				</p>
+				<p>Environnements, autre: Linux, symfony 4.4, NodeJsGit, redis</p>
 
 
-				</div>
+
+				<h2 class="major">Envergure Digitale</h2>
+				<h3>Développeur Web FullStack</h3>
+				<span class="image main"><img src="images/EnvergureDigitale.jpg" alt="" /></span>
+				<h3>Septembre 2018, Juin 2019 - Houille 78</h3>
+				<p>Développeur web.
+					<br/>En charge de plusieurs projet web
+				</p>
+				<p>Conception et développement de boutiques Ecommerce
+					<br/>En lien avec ma formation:
+					<br/>Développement et gestion de projet
+				</p>
+				<p>Environnements et outils: Linux, Zeplin, Prestashop, Git</p>
 
 
-				<!-- Scripts -->
-				<script src="assets/js/jquery.min.js"></script>
-				<script>
 
-				if(window.innerWidth <= 800 && window.innerHeight <= 600){
+				<h2 class="major">Orange</h2>
+				<h3>Développeur/Concepteur Web</h3>
+				<span class="image main"><img src="images/Orange.jpg" alt="" /></span>
+				<h3>Septembre 2017, Octobre 2018 - Paris 11</h3>
+				<p>Développeur à la DSI d'Orange France.
+				<br/>J'ai participé au développement d'une "single page application" (SPA, JS, mvc)</p>
+				<p>Conception et développement de WebServices (PHP, JS) font partie de mon quotidien.
+				<br/>En lien avec ma formation:<br/>j'ai aussi été amené à faire la gestion d'un projet de A à Z</p>
+				<p>Utilisation d'outils : soap, gantt, git/svn</p>
 
-				}else{
-						$('#bg').html('<div id="particles-js" style="height: 100%;"></div>');
-				}
+				<h2 class="major">Cdip</h2>
+				<h3>Développeur Web</h3>
+				<span class="image main"><img src="images/Facilotab2.png" alt="" /></span>
+				<h3>Juin 2016, Aout 2017 - Osny 95</h3>
+				<p>Développeur Web en charge de l'installation d'un CMS Ecommerce (Prestashop) ainsi que créateur de : Modules et WebServices (PHP mvc, Smarty, REST)</p>
+				<p>J'ai fais mes premiers pas dans l'univers du dev front en créant le template du site</p>
+				<p>Utilisation d'outils : mantis, git/svn</p>
+			</article>
 
-				</script>
-				<script src="assets/js/skel.min.js"></script>
-				<script src="assets/js/util.js"></script>
-				<script src="assets/js/main.js"></script>
-				<script src="assets/js/particles.min.js"></script>
-				<script src="assets/js/app.js"></script>
+			<!-- About -->
+			<article id="about">
+				<h2 class="major">Bachelor</h2>
+				<h3>Responsable de projet informatique (bac+3)</h3>
+				<span class="image main"><img src="images/Hitema.jpg" alt="" /></span>
+				<p>Cursus suivie en alternance.
+					<br/>Etablissement scolaire: Hitema
+					<br/>Entreprise: Orange
+					<br/>Rythme: 3 semaines(ent)/1 semaines (eco)
+					<br/>CryptoAnalitics : Plateforme de prévision de fluctuation de crypto monnaie (nodeJs, expérimentation AngularJs)
+					<br/>Certification CISCO 1 (CCNA1)
+				</p>
+				<hr>
+				<h2 class="major">BTS SIO</h2>
+				<h3>Systeme informatique aux organisations (bac+2)</h3>
+				<p>	Cursus suivie en alternance.
+					<br/>Etablissement scolaire: Hitema
+					<br/>Entreprise: CDIP
+					<br/>Rythme: 3 semaines(ent)/2 semaines (eco)
+					<br/>Premier projet annuel (GSB) disponible sur github
+				</p>
+			</article>
 
-				<!-- Global Site Tag (gtag.js) - Google Analytics -->
-				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98228500-1"></script>
-				<script>
-					window.dataLayer = window.dataLayer || [];
-					function gtag(){dataLayer.push(arguments);}
-					gtag('js', new Date());
+			<article id="ArtOfCode">
+				<h2 class="major">Art Of Code</h2>
+				<span class="image main"><img src="images/dev.jpg" alt="" /></span>
+				<p>Build some art with Code</p>
+			</article>
 
-					gtag('config', 'UA-98228500-1');
-				</script>
-			</body>
-			</html>
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li>
+					<a href="https://www.linkedin.com/in/rémy-lefebvre-779b0711b" title="Linkedin" class="icon fa-linkedin">
+						<span class="label">Linkedin</span>
+					</a>
+					<a href="https://github.com/Thorfy" title="GitHub" class="icon fa-github">
+						<span class="label">GitHub</span>
+					</a>
+					<a href="http://www.remylefebvre.fr/cv_RemyLefebvre.pdf" title="Mon CV" class="icon fa-download">
+						<span class="label">Télécharger mon CV</span>
+					</a>
+					<a href="mailto:lefebvre.remy.pro@gmail.com" title="lefebvre.remy.pro@gmail.com" class="icon fa-envelope">
+						<span class="label">email</span>
+					</a>
+				</li>
+			</ul>
+			<p class="copyright">&copy; <a title="www.RemyLefebvre.fr" href="http://www.remylefebvre.fr">www.RemyLefebvre.fr</a></p>
+		</footer>
+	</div>
+
+	<!-- BG -->
+	<div id="bg"></div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script>
+		if(window.innerWidth <= 800 && window.innerHeight <= 600){
+		}else{
+			$('#bg').html('<div id="particles-js" style="height: 100%;"></div>');
+		}
+	</script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/particles.min.js"></script>
+	<script src="assets/js/app.js"></script>
+				
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98228500-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-98228500-1');
+	</script>
+	</body>
+</html>
